--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -11,8 +11,12 @@ jobs:
       - uses: actions/checkout@master
         with:
           fetch-depth: 1
+          ref: differentiated
       - name: Download raw csv from OxCGRT database
         run: |
+          rm -r legacy_data_20200425
+          rm -r data
+          
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new' -s -f -o 'data/OxCGRT_nat_latest.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=vaccine_full' -s -f -o 'data/OxCGRT_vaccines_full.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=differentiated_notes' -s -f -o 'data/OxCGRT_nat_differentiated_withnotes.csv'
