--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -1,4 +1,4 @@
-name: An R workflow to automate daily updates of main repo graphs and timeseries csv
+name: An R workflow to automate daily updates of main repo timeseries csv
 on:
   schedule:
     - cron: '45 7 * * *'
@@ -29,12 +29,12 @@ jobs:
           ls
           source <(curl -s https://raw.githubusercontent.com/saptahash/test_repo/master/mainrepo/sysrequirements.sh)
 
-      - name: Run automated script for graphs and timeseries
+      - name: Run automated script for timeseries
         run: |
           ls
           cd master
           ls
-          Rscript -e 'source("https://raw.githubusercontent.com/saptahash/test_repo/master/mainrepo/githubroutine.r")'
+          Rscript -e 'source("https://raw.githubusercontent.com/OxCGRT/covid-policy-scratchpad/master/r-code/create_main_timeseries.R")'
 
       - name: Commit changes
         run: |
@@ -44,5 +44,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
-          git diff-index --quiet HEAD || git commit -m "OxCGRT Graphs and timeseries Update" -a
+          git diff-index --quiet HEAD || git commit -m "OxCGRT timeseries update" -a
           git push origin master:master
