--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -1,8 +1,6 @@
 name: Data link to OxCGRT
 on:
-  push:
-    branches:
-      - differentiated
+  push
 # schedule:
 #   - cron: '1 2-23 * * *'
 
@@ -13,7 +11,6 @@ jobs:
       - uses: actions/checkout@master
         with:
           fetch-depth: 1
-          ref: differentiated
       - name: Download raw csv from OxCGRT database
         run: |
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new' -s -f -o 'data/OxCGRT_nat_latest.csv'
@@ -65,4 +62,4 @@ jobs:
          git config --local user.name "GitHub Action"
          git add .
          git diff-index --quiet HEAD || git commit -m "OxCGRT Data Update" -a
-         git push origin
+         git push origin master:master
