--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -1,8 +1,8 @@
 name: Data link to OxCGRT
 on:
-  push
-# schedule:
-#   - cron: '1 2-23 * * *'
+#  push
+ schedule:
+   - cron: '1 2-23 * * *'
 
 jobs:
   build:
@@ -13,18 +13,6 @@ jobs:
           fetch-depth: 1
       - name: Download raw csv from OxCGRT database
         run: |
-          rm -r 'data/timeseries'
-          mkdir -p 'data/timeseries'
-          
-          rm 'data/OxCGRT_latest.csv'
-          rm 'data/OxCGRT_latest_allchanges.csv'
-          rm 'data/OxCGRT_latest_combined.csv'
-          rm 'data/OxCGRT_latest_responses.csv'
-          rm 'data/OxCGRT_latest_withnotes.csv'
-          rm 'data/OxCGRT_withnotes_2020.csv'
-          rm 'data/OxCGRT_withnotes_2021.csv'
-          rm 'data/OxCGRT_withnotes_2022.csv'
-          
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new' -s -f -o 'data/OxCGRT_nat_latest.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=vaccine_full' -s -f -o 'data/OxCGRT_vaccines_full.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=differentiated_notes' -s -f -o 'data/OxCGRT_nat_differentiated_withnotes.csv'
@@ -62,14 +50,7 @@ jobs:
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=differentiated_notes&countryCode=USA' -s -f -o 'data/United States/OxCGRT_USA_differentiated_withnotes.csv'
           awk -F "," 'NR==1 {header=$0}; NF>1 && NR>1 {year=substr($6,1,4); if(! files[year]) {print header > ("data/United States/OxCGRT_USA_differentiated_withnotes_" year ".csv"); files[year]=1}; print $0 > ("data/United States/OxCGRT_USA_differentiated_withnotes_" year ".csv")}' 'data/United States/OxCGRT_USA_differentiated_withnotes.csv'
           rm 'data/United States/OxCGRT_USA_differentiated_withnotes.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload?type=Compressed' -s -f -o 'Legacy Repository/Legacy Repo Jul22/OxCGRT_latest.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload?type=changes_responses' -s -f -o 'Legacy Repository/Legacy Repo Jul22/OxCGRT_latest_responses.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload?type=changes_all' -s -f -o 'Legacy Repository/Legacy Repo Jul22/OxCGRT_latest_allchanges.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload?type=combined' -s -f -o 'Legacy Repository/Legacy Repo Jul22/OxCGRT_latest_combined.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=vaccine_full' -s -f -o 'Legacy Repository/Legacy Repo Jul22/OxCGRT_vaccines_full.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload' -s -f -o 'Legacy Repository/Legacy Repo Jul22/OxCGRT_withnotes.csv'
-#          awk -F "," 'NR==1 {header=$0}; NF>1 && NR>1 {year=substr($6,1,4); if(! files[year]) {print header > ("Legacy Repository/Legacy Repo Jul22/OxCGRT_withnotes_" year ".csv"); files[year]=1}; print $0 > ("Legacy Repository/Legacy Repo Jul22/OxCGRT_withnotes_" year ".csv")}' 'Legacy Repository/Legacy Repo Jul22/OxCGRT_withnotes.csv'
-#          rm 'Legacy Repository/Legacy Repo Jul22/OxCGRT_withnotes.csv'
+
           
           
       - name: Commit changes
