change back to cron job

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -1,8 +1,8 @@
 name: An R workflow to automate daily updates of main repo timeseries csv
 on:
-  push
-#  schedule:
-#    - cron: '45 7 * * *'
+#  push
+  schedule:
+    - cron: '45 7 * * *'
 
 jobs:
   build:
