fix China legacy

--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -12,7 +12,10 @@ jobs:
         with:
           fetch-depth: 1
       - name: Download raw csv from OxCGRT database
-        run: |        
+        run: |
+          rm 'data/India/OxCGRT_CHN_withnotes LEGACY.csv'
+          rm 'data/India/OxCGRT_CHN_latest LEGACY.csv'
+          
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new' -s -f -o 'data/OxCGRT_nat_latest.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=vaccine_full' -s -f -o 'data/OxCGRT_vaccines_full.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=differentiated_notes' -s -f -o 'data/OxCGRT_nat_differentiated_withnotes.csv'
@@ -23,12 +26,12 @@ jobs:
           awk --lint -F "," 'NR==1 {header=$0}; NF>1 && NR>1 && ($2=="BRA" || $2=="IND" || $2=="CHN") {countrycode=$2; if(! files[countrycode]) {print header > ("data/OxCGRT_" countrycode "_latest LEGACY.csv"); files[countrycode]=1}; print $0 > ("data/OxCGRT_" countrycode "_latest LEGACY.csv")}' 'data/OxCGRT_latest LEGACY.csv'
           mv 'data/OxCGRT_BRA_latest LEGACY.csv' 'data/Brazil/OxCGRT_BRA_latest LEGACY.csv'
           mv 'data/OxCGRT_IND_latest LEGACY.csv' 'data/India/OxCGRT_IND_latest LEGACY.csv'
-          mv 'data/OxCGRT_CHN_latest LEGACY.csv' 'data/India/OxCGRT_CHN_latest LEGACY.csv'
+          mv 'data/OxCGRT_CHN_latest LEGACY.csv' 'data/China/OxCGRT_CHN_latest LEGACY.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload' -s -f -o 'data/OxCGRT_withnotes LEGACY.csv'
           awk --lint -F "," 'NR==1 {header=$0}; NF>1 && NR>1 && ($2=="BRA" || $2=="IND" || $2=="CHN") {countrycode=$2; if(! files[countrycode]) {print header > ("data/OxCGRT_" countrycode "_withnotes LEGACY.csv"); files[countrycode]=1}; print $0 > ("data/OxCGRT_" countrycode "_withnotes LEGACY.csv")}' 'data/OxCGRT_withnotes LEGACY.csv'
           mv 'data/OxCGRT_BRA_withnotes LEGACY.csv' 'data/Brazil/OxCGRT_BRA_withnotes LEGACY.csv'
           mv 'data/OxCGRT_IND_withnotes LEGACY.csv' 'data/India/OxCGRT_IND_withnotes LEGACY.csv'
-          mv 'data/OxCGRT_CHN_withnotes LEGACY.csv' 'data/India/OxCGRT_CHN_withnotes LEGACY.csv'
+          mv 'data/OxCGRT_CHN_withnotes LEGACY.csv' 'data/China/OxCGRT_CHN_withnotes LEGACY.csv'
           rm 'data/OxCGRT_latest LEGACY.csv'
           rm 'data/OxCGRT_withnotes LEGACY.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new&countryCode=CAN' -s -f -o 'data/Canada/OxCGRT_CAN_latest.csv'
