--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -19,6 +19,10 @@ jobs:
           awk -F "," 'NR==1 {header=$0}; NF>1 && NR>1 {year=substr($6,1,4); if(! files[year]) {print header > ("data/OxCGRT_nat_differentiated_withnotes_" year ".csv"); files[year]=1}; print $0 > ("data/OxCGRT_nat_differentiated_withnotes_" year ".csv")}' 'data/OxCGRT_nat_differentiated_withnotes.csv'
           rm 'data/OxCGRT_nat_differentiated_withnotes.csv'
           
+          curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new&countryCode=AUS' -s -f -o 'data/Australia/OxCGRT_AUS_latest.csv'
+          curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=differentiated_notes&countryCode=AUS' -s -f -o 'data/Australia/OxCGRT_AUS_differentiated_withnotes.csv'
+          awk -F "," 'NR==1 {header=$0}; NF>1 && NR>1 {year=substr($6,1,4); if(! files[year]) {print header > ("data/Australia/OxCGRT_AUS_differentiated_withnotes_" year ".csv"); files[year]=1}; print $0 > ("data/Australia/OxCGRT_AUS_differentiated_withnotes_" year ".csv")}' 'data/Australia/OxCGRT_AUS_differentiated_withnotes.csv'
+          rm 'data/Australia/OxCGRT_AUS_differentiated_withnotes.csv'
           curl 'https://oxcgrtportal.azurewebsites.net/api/CSVDownload?type=Compressed' -s -f -o 'data/OxCGRT_latest LEGACY.csv'
           awk --lint -F "," 'NR==1 {header=$0}; NF>1 && NR>1 && ($2=="BRA" || $2=="IND" || $2=="CHN") {countrycode=$2; if(! files[countrycode]) {print header > ("data/OxCGRT_" countrycode "_latest LEGACY.csv"); files[countrycode]=1}; print $0 > ("data/OxCGRT_" countrycode "_latest LEGACY.csv")}' 'data/OxCGRT_latest LEGACY.csv'
           mv 'data/OxCGRT_BRA_latest LEGACY.csv' 'data/Brazil/OxCGRT_BRA_latest LEGACY.csv'
@@ -45,8 +49,6 @@ jobs:
           awk -F "," 'NR==1 {header=$0}; NF>1 && NR>1 {year=substr($6,1,4); if(! files[year]) {print header > ("data/United States/OxCGRT_USA_differentiated_withnotes_" year ".csv"); files[year]=1}; print $0 > ("data/United States/OxCGRT_USA_differentiated_withnotes_" year ".csv")}' 'data/United States/OxCGRT_USA_differentiated_withnotes.csv'
           rm 'data/United States/OxCGRT_USA_differentiated_withnotes.csv'
 
-          
-          
       - name: Commit changes
         run: |
          git config --local user.email "action@github.com"
@@ -54,9 +56,3 @@ jobs:
          git add .
          git diff-index --quiet HEAD || git commit -m "OxCGRT Data Update" -a
          git push origin master:master
-
-
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=compressed_new&countryCode=AUS' -s -f -o 'data/Australia/OxCGRT_AUS_latest.csv'
-#          curl 'https://oxcgrtportal.azurewebsites.net/api/csvdownload?type=differentiated_notes&countryCode=AUS' -s -f -o 'data/Australia/OxCGRT_AUS_differentiated_withnotes.csv'
-#          awk -F "," 'NR==1 {header=$0}; NF>1 && NR>1 {year=substr($6,1,4); if(! files[year]) {print header > ("data/Australia/OxCGRT_AUS_differentiated_withnotes_" year ".csv"); files[year]=1}; print $0 > ("data/Australia/OxCGRT_AUS_differentiated_withnotes_" year ".csv")}' 'data/Australia/OxCGRT_AUS_differentiated_withnotes.csv'
-#          rm 'data/Australia/OxCGRT_AUS_differentiated_withnotes.csv'
